--- a/index.html
+++ b/index.html
@@ -15,78 +15,80 @@
     <div class="container d-flex justify-content-center" id="question-1">
       <div class="card my-4 p-4 question-block" style="width: 75%;">
         <h4 class="mb-3">Class starts at 8:00 AM. You're...</h4>
-        <div class="row g-2">
+
+        <div id="answer-buttons" class="row g-2">
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">A: Still in bed.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A" data-buttonid = "1">A: Still in bed.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">B: Already front row.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B" data-buttonid ="1">B: Already front row.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">C: Brushing your teeth on the way.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C" data-buttonid ="1">C: Brushing your teeth on the way.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">D: Forgot you had that class.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D" data-buttonid ="1">D: Forgot you had that class.</button>
           </div>
         </div>
+
       </div>
     </div>
 
-    <div class="container d-flex justify-content-center" id="question-2">
+    <div class="container d-flex justify-content-center" id="question-1">
       <div class="card my-4 p-4 question-block" style="width: 75%;">
         <h4 class="mb-3">YOu said you'd "cook at home." Reality?</h4>
-        <div class="row g-2">
+        <div id="answer-buttons" class="row g-2">
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">A: Ramen, again.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A" data-buttonid ="2">A: Ramen, again.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">B: Meal-prep master.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B" data-buttonid ="2">B: Meal-prep master.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">C: Burnt toast disaster.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C" data-buttonid ="2">C: Burnt toast disaster.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">D: Cereal counts, right.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D" data-buttonid ="2">D: Cereal counts, right.</button>
           </div>
         </div>
       </div>
     </div>       
     
-    <div class="container d-flex justify-content-center" id="question-3">
+    <div class="container d-flex justify-content-center" id="question-1">
       <div class="card my-4 p-4 question-block" style="width: 75%;">
         <h4 class="mb-3">Group project role?</h4>
-        <div class="row g-2">
+        <div id="answer-buttons" class="row g-2">
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">A: Vanished idea person.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A" data-buttonid ="3">A: Vanished idea person.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">B: Does all the work.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B" data-buttonid ="3">B: Does all the work.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">C: Powerpoint stylist.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C" data-buttonid ="3">C: Powerpoint stylist.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">D: "Moral support".</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D" data-buttonid ="3">D: "Moral support".</button>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container d-flex justify-content-center" id="question-4">
+    <div class="container d-flex justify-content-center" id="question-1">
       <div class="card my-4 p-4 question-block" style="width: 75%;">
         <h4 class="mb-3">Laptop hits 1% during exam. You...</h4>
-        <div class="row g-2">
+        <div id="answer-buttons" class="row g-2">
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A">A: Pray to the tech gods.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="A" data-buttonid ="4">A: Pray to the tech gods.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B">B: Plug in backup battery.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="B" data-buttonid ="4">B: Plug in backup battery.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C">C: Write on a napkin.</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="C" data-buttonid ="4">C: Write on a napkin.</button>
           </div>
           <div class="col-6">
-            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D">D: Whisper, "just 3 more mins...".</button>
+            <button class="btn btn-outline-primary w-100 answer-btn" data-answer="D" data-buttonid ="4">D: Whisper, "just 3 more mins...".</button>
           </div>
         </div>
       </div>
